# SucriBot

./: .gitignore  README.md  bot_config.py  exo_aleatoire.py  main.py  pyproject.toml  webserver.py
fichiers/: logs.txt  mails.txt  profs.txt
fichiers/tex/: TD25.tex
