[tool.poetry]
name = "repl_python3_SucriBot"
version = "0.1.0"
description = ""
authors = ["Antoine Groudiev <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
emoji = "^1.6.0"
feedparser = "^6.0.8"
Flask = "^2.0.2"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
